--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ JWT_SECRET_KEY=mySuperSecret123
 
 
 # EMail
-EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_HOST = smtp.gmail.com
 EMAIL_PORT = 587
-EMAIL_USER = 'drivewell10@gmail.com'
-EMAIL_PASS = 'xfiv okdn irsv tvqw'
-EMAIL_FROM = 'drivewell10@gmail.com'
+EMAIL_USER = drivewell10@gmail.com
+EMAIL_PASS = xfiv okdn irsv tvqw
+EMAIL_FROM = drivewell10@gmail.com
