--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ JWT_SECRET_KEY=mySuperSecret123
 # EMail
 EMAIL_HOST =smtp.gmail.com
 EMAIL_PORT =587
-EMAIL_USER =rishi2020.rp@gmail.com
-EMAIL_PASS =ewcr eidf dovg fncb
-EMAIL_FROM =rishi2020.rp@gmail.com
+EMAIL_USER =drivewell10@gmail.com
+EMAIL_PASS =xfiv okdn irsv tvqw
+EMAIL_FROM =drivewell10@gmail.com
